<resources>
    <string name="app_name">BookTracker</string>
    <string name="welcome_activity_image_description">Оранжевая магическая книга</string>
    <string name="welcome_activity_main_text">Пожалуй, лучший трекер прочитанных книг</string>
    <string name="welcome_activity_text_1">Созданный студентами</string>
    <string name="welcome_activity_text_button_0">Использовать локально</string>
    <string name="welcome_activity_text_button_1">Войти</string>
    <string name="welcome_activity_text_button_2">Зарегистрироваться</string>
    <string name="welcome_activity_button_text_3">Уже есть аккаунт?</string>
    <string name="login_activity_bar_title">Вход</string>
    <string name="login_activity_image_description">Магическая книга с горами</string>
    <string name="login_activity_login_text_input">Введите ваш логин</string>
    <string name="login_activity_password_text_input">Введите ваш пароль</string>
    <string name="login_activity_button_text0">Войти</string>
    <string name="registration_activity_bar_title">Регистрация</string>
    <string name="registration_activity_email_text_input">Введите почту</string>
    <string name="registration_activity_login_text_input">Введите логин</string>
    <string name="registration_activity_password_text_input">Введите пароль</string>
    <string name="registration_activity_rep_password_text_input">Повторите пароль</string>
    <string name="registration_activity_title_sex">Пол</string>
    <string name="registration_activity_check_box_1">Мужской</string>
    <string name="registration_activity_check_box_2">Женский</string>
    <string name="registration_activity_check_box_3">Другое</string>
    <string name="registration_activity_button_text_0">Зарегистрироваться</string>
    <string name="registration_activity_privacy_policy">Нажимая на кнопку, вы соглашаетесь политикой конфиденциальности и обработки персональных данных, а также принимаете пользовательское соглашение</string>
    <string name="bottom_nav_menu_activities">Активность</string>
    <string name="bottom_nav_menu_user">Профиль</string>
    <string name="bottom_nav_menu_settings">Настройки</string>
    <string name="fragment_null_activity_text_0">Время читать</string>
    <string name="fragment_null_activity_text_1">Переходи в быстрый доступ и раздел “список книг” для отслеживания новой книги</string>
    <string name="fragment_activity_tab_mine_books_text">Текущие книги</string>
    <string name="fragment_activity_tab_quick_action_text">Быстрый доступ</string>
    <string name="activity_main_page_button_add_new_books">Добавить новую книгу</string>
    <string name="list_item_book_name">Название книги</string>
    <string name="list_item_book_author">Автор книги</string>
    <string name="list_item_book_genre">Жанр книги</string>
    <string name="list_item_datetime_start_reading">Начало:</string>
    <string name="list_item_datetime_data">xx month</string>
    <string name="list_item_progress">Прочитано:</string>
    <string name="list_item_read_it_data">v1</string>
    <string name="list_item_remained_data">v2</string>
    <string name="list_item_progress_between">стр. из</string>
    <string name="list_item_read_it_data_in_percents">v1</string>
    <string name="list_item_read_it_data_percents">%</string>
    <string name="list_item_book_cover">Обложка книги</string>
    <string name="placeholder_book_cover_text">Нет обложки</string>
    <string name="fragment_quick_actions_button_text_0">Список доступных книг</string>
    <string name="fragment_quick_actions_button_text_1">Прочитано</string>
    <string name="fragment_quick_actions_button_text_2">Хочу прочитать</string>
    <string name="detailed_list_item_fragment_activities_bar_title">Чтение книги</string>
    <string name="list_item_book_rating">Рейтинг:</string>
    <string name="list_item_book_icon_star_text">Звездочка</string>
    <string name="list_item_book_rating_data">v1</string>
    <string name="list_item_book_rating_button_star">Звездочка</string>
    <string name="list_item_book_icon_action_favorite_text">Книжка находится в избранном</string>
    <string name="list_item_book_icon_action_current_text">Книга находится в текущих</string>
    <string name="list_item_book_icon_action_compleate_text">Книга находится в завершенных</string>
    <string name="list_item_book_genre_short">Жанр:</string>
    <string name="list_item_book_genre_short_data">v1</string>
    <string name="list_item_book_write_date">Дата написания:</string>
    <string name="list_item_book_write_date_data">v1</string>
    <string name="list_item_book_count_of_pages">Количество страниц:</string>
    <string name="list_item_book_count_of_pages_data">v1</string>
    <string name="list_item_book_isbn_data">xxx-x-xxxxxx-xx-x</string>
    <string name="list_item_book_isbn">ISBN:</string>
    <string name="list_item_current_page">Текущая страница:</string>
    <string name="list_item_current_page_data">v1</string>
    <string name="detailed_list_item_fragment_activities_message_text_input">Введите заметку</string>
    <string name="detailed_list_item_fragment_activities_button_0_text">Зафиксировать прочитанное</string>
    <string name="detailed_list_item_fragment_activities_count_pages_text_input">Количество прочитанных страниц</string>
    <string name="message_datetime_data">xx.xx.xxxx</string>
    <string name="message_text_data">"Sample: Надо прочитать другие книги данного автора. "</string>
</resources>