<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_welcome_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingTop="64dp"
    android:paddingHorizontal="16dp"
    android:background="?attr/color_dynamic0">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/welcome_page_guideline_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <ImageView
        android:id="@+id/welcome_page_image"
        android:layout_width="360dp"
        android:layout_height="422dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/welcome_page_guideline_vertical"
        app:layout_constraintEnd_toEndOf="@id/welcome_page_guideline_vertical"
        android:contentDescription="@string/welcome_activity_image_description"
        android:src="@drawable/ic_welcome_page">
    </ImageView>

    <TextView
        android:id="@+id/welcome_page_text_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/welcome_activity_main_text"
        app:layout_constraintStart_toStartOf="@id/welcome_page_guideline_vertical"
        app:layout_constraintEnd_toEndOf="@id/welcome_page_guideline_vertical"
        android:textFontWeight="700"
        android:textSize="24sp"
        android:gravity="center"
        android:textColor="?attr/color_dynamic1"
        android:letterSpacing="0"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/welcome_page_image">
    </TextView>

    <TextView
        android:id="@+id/welcome_page_text_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/welcome_activity_text_1"
        app:layout_constraintStart_toStartOf="@id/welcome_page_guideline_vertical"
        app:layout_constraintEnd_toEndOf="@id/welcome_page_guideline_vertical"
        android:textFontWeight="400"
        android:textSize="16sp"
        android:letterSpacing="0"
        android:gravity="center"
        android:textColor="?attr/color_dynamic2"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/welcome_page_text_0">
    </TextView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/welcome_page_button0"
        android:layout_width="312dp"
        android:layout_height="64dp"
        android:text="@string/welcome_activity_text_button_0"
        android:textSize="16sp"
        android:letterSpacing="0"
        android:textFontWeight="700"
        app:layout_constraintTop_toBottomOf="@id/welcome_page_text_1"
        app:layout_constraintStart_toStartOf="@id/welcome_page_guideline_vertical"
        app:layout_constraintEnd_toEndOf="@id/welcome_page_guideline_vertical"
        android:layout_marginTop="16dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:textColor="@color/white"
        android:backgroundTint="?attr/color0"
        android:textAllCaps="false">
    </com.google.android.material.button.MaterialButton>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/welcome_page_button1"
        android:layout_width="312dp"
        android:layout_height="64dp"
        android:text="@string/welcome_activity_text_button_2"
        android:textSize="16sp"
        android:letterSpacing="0"
        android:textFontWeight="700"
        app:layout_constraintTop_toBottomOf="@id/welcome_page_button0"
        app:layout_constraintStart_toStartOf="@id/welcome_page_guideline_vertical"
        app:layout_constraintEnd_toEndOf="@id/welcome_page_guideline_vertical"
        android:layout_marginTop="16dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:textColor="@color/white"
        android:backgroundTint="?attr/color1"
        android:textAllCaps="false">
    </com.google.android.material.button.MaterialButton>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/welcome_page_button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_activity_button_text_3"
        android:textSize="16sp"
        android:letterSpacing="0"
        android:textFontWeight="700"
        app:layout_constraintTop_toBottomOf="@id/welcome_page_button1"
        app:layout_constraintStart_toStartOf="@id/welcome_page_guideline_vertical"
        app:layout_constraintEnd_toEndOf="@id/welcome_page_guideline_vertical"
        android:layout_marginTop="16dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:background="@android:color/transparent"
        android:textColor="?attr/color2"
        android:textAllCaps="false">
    </com.google.android.material.button.MaterialButton>
</androidx.constraintlayout.widget.ConstraintLayout>