<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_quick_actions"
    android:padding="8dp"
    android:background="?attr/color_dynamic0"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fragment_quick_actions_button_0"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:backgroundTint="?attr/color0"
        android:letterSpacing="0"
        android:text="@string/fragment_quick_actions_button_text_0"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textFontWeight="700"
        android:textSize="16sp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fragment_quick_actions_button_1"
        app:layout_constraintTop_toBottomOf="@id/fragment_quick_actions_button_0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="?attr/color1"
        android:letterSpacing="0"
        android:text="@string/fragment_quick_actions_button_text_1"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textFontWeight="700"
        android:textSize="16sp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fragment_quick_actions_button_2"
        app:layout_constraintTop_toBottomOf="@id/fragment_quick_actions_button_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="?attr/color2"
        android:letterSpacing="0"
        android:text="@string/fragment_quick_actions_button_text_2"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textFontWeight="700"
        android:textSize="16sp"/>


</androidx.constraintlayout.widget.ConstraintLayout>